[gd_scene load_steps=16 format=3 uid="uid://ciq283q6k6vec"]

[ext_resource type="Script" path="res://fighter.gd" id="1_8g1uw"]
[ext_resource type="Texture2D" uid="uid://cbuqqd26rx6cq" path="res://IMG/Палочка (Walk).png" id="3_hsxp1"]
[ext_resource type="Texture2D" uid="uid://dnda61hml7opv" path="res://IMG/Палочка (Idle).png" id="3_r64sm"]
[ext_resource type="Texture2D" uid="uid://ng42k7w7ttc6" path="res://IMG/Палочка (Run).png" id="4_1bv1a"]
[ext_resource type="Texture2D" uid="uid://dnge464lnf5g3" path="res://IMG/Палочка (Jump).png" id="5_hf4ur"]
[ext_resource type="Texture2D" uid="uid://d1pbb6rnkd3qq" path="res://IMG/Палочка (Climb).png" id="6_qekwx"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e0anf"]
radius = 16.0
height = 112.0

[sub_resource type="Animation" id="Animation_v0voj"]
resource_name = "Climb"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_qekwx")]
}

[sub_resource type="Animation" id="Animation_127br"]
resource_name = "Idle"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r64sm")]
}

[sub_resource type="Animation" id="Animation_awvgg"]
resource_name = "Jump"
length = 1.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_hf4ur")]
}

[sub_resource type="Animation" id="Animation_2appl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_r64sm")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_f0og3"]
resource_name = "Run"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_1bv1a")]
}

[sub_resource type="Animation" id="Animation_mpnir"]
resource_name = "Walk"
length = 1.3
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_hsxp1")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7dt6u"]
_data = {
"Climb": SubResource("Animation_v0voj"),
"Idle": SubResource("Animation_127br"),
"Jump": SubResource("Animation_awvgg"),
"RESET": SubResource("Animation_2appl"),
"Run": SubResource("Animation_f0og3"),
"Walk": SubResource("Animation_mpnir")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8joja"]
size = Vector2(8, 36)

[node name="Fighter" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_8g1uw")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_e0anf")

[node name="Label" type="Label" parent="."]
custom_minimum_size = Vector2(200, 0)
offset_left = -100.0
offset_top = -84.0
offset_right = 100.0
offset_bottom = -58.0
text = "Idle"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("3_r64sm")
hframes = 15

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7dt6u")
}

[node name="LegsOnLadder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="LegsOnLadder"]
position = Vector2(0, 50)
shape = SubResource("RectangleShape2D_8joja")

[node name="BodyOnLadder" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="BodyOnLadder"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_8joja")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="area_entered" from="LegsOnLadder" to="." method="_on_legs_on_ladder_area_entered"]
[connection signal="area_exited" from="LegsOnLadder" to="." method="_on_legs_on_ladder_area_exited"]
[connection signal="area_entered" from="BodyOnLadder" to="." method="_on_body_on_ladder_area_entered"]
[connection signal="area_exited" from="BodyOnLadder" to="." method="_on_body_on_ladder_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
